miniextendr-macros/tests/ui/derive_dataframe_struct_field_multisegment_no_derive.stderr
error[E0599]: no function or associated item named `to_dataframe` found for struct `CString` in the current scope
  --> tests/ui/derive_dataframe_struct_field_multisegment_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ function or associated item not found in `CString`
   |
note: if you're trying to build a new `CString` consider using one of the following associated functions:
      CString::new
      CString::from_vec_unchecked
      CString::from_raw
      CString::from_vec_with_nul_unchecked
      CString::from_vec_with_nul
  --> $RUST/alloc/src/ffi/c_str.rs
   |
   |     pub fn new<T: Into<Vec<u8>>>(t: T) -> Result<CString, NulError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub unsafe fn from_vec_unchecked(v: Vec<u8>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub unsafe fn from_raw(ptr: *mut c_char) -> CString {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub unsafe fn from_vec_with_nul_unchecked(v: Vec<u8>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub fn from_vec_with_nul(v: Vec<u8>) -> Result<Self, FromVecWithNulError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait `DataFrameRow` is not implemented for `CString`
  --> tests/ui/derive_dataframe_struct_field_multisegment_no_derive.rs:15:12
   |
15 |     label: std::ffi::CString,
   |            ^^^^^^^^^^^^^^^^^ add `#[derive(DataFrameRow)]` to `CString`, annotate the field with `#[dataframe(as_list)]` to keep it as an opaque list-column, or annotate with `#[dataframe(as_factor)]` for unit-only enums
   |
   = help: the trait `DataFrameRow` is not implemented for `CString`
   = note: struct- and enum-typed variant fields are flattened by default into prefixed columns; the inner type must implement `DataFrameRow` for this to work
help: the trait `DataFrameRow` is implemented for `Wrapper`
  --> tests/ui/derive_dataframe_struct_field_multisegment_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
note: required by a bound in `_assert_inner_is_dataframe_row`
  --> tests/ui/derive_dataframe_struct_field_multisegment_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ required by this bound in `_assert_inner_is_dataframe_row`
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
